--- a/Exercise 2/style.css
+++ b/Exercise 2/style.css
@@ -1,3 +1,18 @@
+h1 {
+    text-align: center; color: white; font-size: 300%
+}
+li { 
+	text-align: right; display: inline-block; width: 100px; 
+}
+h3 {
+    text-align: center; color: white;
+}
+h2 {
+    text-align: center; font-size: 200%; color: white;
+}
 body {
-	background: yellow
+    background-image: url("black.png"); background-repeat: repeat; color: white; text-align: center;
+}
+#borderimg { 
+    -webkit-border-image: url(Images/image 1 Dougie.jpg) 30 round; border-image: url(Images/image 1 Dougie.jpg) 30 round; border-image: url(Images/image 1 Dougie.jpg) 30 round;
 }
