--- a/Exercise 2/style.css
+++ b/Exercise 2/style.css
@@ -11,8 +11,8 @@ h2 {
     text-align: center; font-size: 200%; color: white;
 }
 body {
-    background-image: url("black.png"); background-repeat: repeat; color: white; text-align: center;
+    background-image: url("black.png"); background-repeat: repeat; color: white; text-align: center; border-image-source: url(Images/image 1 Dougie.jpg); color: white;
 }
-#borderimg { 
-    -webkit-border-image: url(Images/image 1 Dougie.jpg) 30 round; border-image: url(Images/image 1 Dougie.jpg) 30 round; border-image: url(Images/image 1 Dougie.jpg) 30 round;
+#b#borderimg {
+    border-image-source: url(Images/image 1 Dougie.jpg); color: white;
 }
