--- a/Exercise 2/style.css
+++ b/Exercise 2/style.css
@@ -2,7 +2,7 @@ h1 {
     text-align: center; color: white; font-size: 300%
 }
 li { 
-	text-align: right; display: inline-block; width: 100px; 
+	text-align: center; display: inline-block; width: 100px; 
 }
 h3 {
     text-align: center; color: white;
